--- a/bookingclient/src/components/reserve/reserve.css
+++ b/bookingclient/src/components/reserve/reserve.css
@@ -16,6 +16,10 @@
     position: relative;
 }
 
+.rContainer>span {
+    font-weight: 900;
+}
+
 .rClose {
     position: absolute;
     top: 0;
@@ -37,7 +41,7 @@
 }
 
 .rTitle {
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .rDesc {
@@ -63,6 +67,11 @@
 .room {
     display: flex;
     flex-direction: column;
+}
+
+.room>label {
+    font-weight: 900;
+    color: black;
 }
 
 .rButton {
